000 - fix for header top mobile

--- a/pages/basketball/style.scss
+++ b/pages/basketball/style.scss
@@ -94,6 +94,7 @@ $leagueColor: ( 0: #CD5E31, 1: #ED1B24, 2: #055888, 3: #C5822F, 4: #C03000, 5: #
     position: fixed;
     width: 100%;
     top: 0;
+    z-index: 999;
   }
   .table th {
     font-weight: normal;
