--- a/components/soccer/table/style.scss
+++ b/components/soccer/table/style.scss
@@ -1,70 +1,20 @@
-.search-filter {
-    display: flex;
-    justify-content: space-between;
-    padding: 1rem 0;
-    font-size: 1.4rem;
-    color: #3A3B45;
-}
+.table {
+    box-shadow: 0 0 0.5rem 0 #d7d7d7;
+    border-radius: .3rem;
+    border: 1px solid #DFDFDF;
+    background: #fff;
 
-.combo-search {
-    display: flex;
-}
-
-.search-section {
-    position: relative;
-}
-
-.search-box {
-    background-color: #fff;
-    border: .1rem solid #C0DAF4;
-    border-radius: .4rem;
-
-    .txt-search {
-        height: 3.4rem;
-        width: 15rem;
-        border: none;
-        margin-right: .4rem;
-    }
-
-    .txt-search:focus {
-        outline: none;
-    }
-
-    .icon-search {
-        font-size: 1.8rem;
-        padding: 0 .4rem;
-        position: relative;
-        top: .3rem;
-
-        &:before {
-            color: #6D757D;
-        }
+    .advertisement-wrapper {
+        height: 100px;
     }
 }
 
-.search-history {
-    display: none;
-    border-radius: .4rem;
-    list-style: none;
-    position: absolute;
-    background-color: #fff;
-    padding: 0;
-    margin: 0;
-    box-shadow: 0 0 3px rgba(102, 102, 102, 0.5);
-    top: 3.8rem;
-    min-width: 18rem;
+.mobile {
+    padding: 4.3rem 0 5rem;
 
-    .history-item {
-        padding: .8rem;
+    .header-top-mobile {
+        position: fixed;
+        width: 100%;
+        top: 0;
     }
-}
-
-.filter-event {
-    border-radius: .4rem;
-    background-color: #1B3464;
-    color: #fff;
-    padding: .9rem 2rem;
-    text-align: center;
-    align-self: center;
-    margin-right: 1.2rem;
 }
