000 - style table for mobile device

--- a/components/soccer/table/row/style.scss
+++ b/components/soccer/table/row/style.scss
@@ -37,19 +37,23 @@
 
 .col-home,
 .col-away {
-    width: 19rem;
+    width: 100%;
 }
 
-.col-favorites {
+.col-favorites, .col-score {
     width: 5rem;
 }
 
-.col-time {
-    width: 8rem;
+.col-time, .col-status {
+    width: 6rem;
 }
 
 .col-league {
-    width: 6rem;
+    width: 7rem;
+}
+
+.col-check {
+    width: 3rem;
 }
 
 
@@ -59,9 +63,20 @@
         border: .005rem solid #DFDFDF;
         padding: 0.4rem;
     }
+}
 
-    .col-home,
-    .col-away {
-        width: 10rem;
+@media screen and (max-device-width: 480px) {
+    .col-league {
+        width: 6rem;
     }
+    .col-time, .col-status {
+        width: 5rem;
+    }
+    .col-favorites, .col-score {
+        width: 4rem;
+    } 
+    .col-check {
+        width: 2rem;
+    }
+
 }
