--- a/components/soccer/table/row/style.scss
+++ b/components/soccer/table/row/style.scss
@@ -69,14 +69,11 @@
     .col-league {
         width: 6rem;
     }
-    .col-time, .col-status {
+    .col-time, .col-status, .col-score {
         width: 5rem;
     }
-    .col-favorites, .col-score {
+    .col-favorites {
         width: 4rem;
     } 
-    .col-check {
-        width: 2rem;
-    }
 
 }
