--- a/components/soccer/table/style.scss
+++ b/components/soccer/table/style.scss
@@ -4,6 +4,9 @@
     border: 1px solid #DFDFDF;
     background: #fff;
     table-layout: fixed;
+    .mobile & {
+        margin-top: 4.6rem;
+    }
 }
 
 .mobile {
