--- a/components/soccer/table/title-row/title-row.scss
+++ b/components/soccer/table/title-row/title-row.scss
@@ -1,5 +1,14 @@
-.latest-title {
-    background: #FFF282;
+
+[class*="title"] {
     font-weight: bold;
     text-align: left;
+    color: #3A3B45;
+}
+
+.latest-title {
+    background: #FFFEEB;   
+}
+
+.cancel-title {
+    background-color: #DEE2E6;
 }
