--- a/components/soccer/table/row/style.scss
+++ b/components/soccer/table/row/style.scss
@@ -1,3 +1,7 @@
+.match-row {
+    cursor: pointer;
+}
+
 .text-score {
     color: #FF0000;
     font-weight: bold;
@@ -40,11 +44,13 @@
     width: 100%;
 }
 
-.col-favorites, .col-score {
+.col-favorites,
+.col-score {
     width: 5rem;
 }
 
-.col-time, .col-status {
+.col-time,
+.col-status {
     width: 7rem;
 }
 
@@ -69,14 +75,18 @@
     .col-league {
         width: 5rem;
     }
-    .col-time, .col-status {
+
+    .col-time,
+    .col-status {
         width: 4rem;
     }
+
     .col-favorites {
         width: 3rem;
-    } 
+    }
+
     .col-score {
         width: 4.5rem;
-    } 
+    }
 
 }
