000 - edit date bar

--- a/components/date-bar/style.scss
+++ b/components/date-bar/style.scss
@@ -26,12 +26,8 @@
   }
 }
 
-.nav-date {
-  display: flex;
-  justify-content: space-between;
+.nav-date {  
   background: #fff;
-  padding: 1.8rem 2.2rem;
-
   border-radius: 0.4rem 0.4rem 0 0;
   box-shadow: 0 0.2rem 0.2rem 0 rgba(0, 0, 0, 0.14),
     0 0.3rem 0.2rem -0.5rem rgba(0, 0, 0, 0.2),
@@ -51,20 +47,26 @@
 }
 
 .date-bar {
-  .date-item {
-    display: inline-block;
-    padding: 0 1rem;
-    color: #6e707a;
-    font-size: 1.4rem;
-    cursor: pointer;
-    text-align: center;
-    border-bottom: 0.2rem solid transparent;
-    vertical-align: middle;
+  display: flex;
+  flex: 0 1 auto;
+  flex-direction: row;
+  flex-wrap: wrap;
+  width: 100%;
+  align-items: center;
+  .date-item,
+    .datepicker-wrapper {
+      flex-grow: 1;
+      flex-basis: 0;
+      max-width: 100%;
+      text-align: center;
+      vertical-align: middle;
+      padding: 1.7rem;
 
-    @media (max-width: 768px) {
-      padding: 0 0.5rem;
+      .mobile & {        
+        font-size: 0.9rem;
+        padding: 1rem;
+      }
     }
-  }
 
   .days {
     text-transform: uppercase;
@@ -72,27 +74,27 @@
 
   .active {
     color: #E70C12;
-    border-bottom-color: #E70C12;
+    border-bottom: 2px solid #E70C12;
     font-weight: bold;
   }
 
   .live-score {
     position: relative;
-    display: none;
-
-    .mobile & {
-      display: inline-block;
-    }
   }
 
   .has-live {
     @include circle(7px);
     position: absolute;
-    top: 10px;
+    top: 1.3rem;
     left: 50%;
-    transform: translateX(6px);
+    transform: translateX(.6rem);
     background: #fc1923;
     display: block;
+
+    .mobile & {
+      top: 1rem;
+      transform: translateX(.6rem);
+    }
 
     &:before,
     &:after {
@@ -117,6 +119,9 @@
 
   .icon-live {
     font-size: 2rem;
+    &:before {      
+      color: #fc1923;
+    }
   }
 
   .datepicker-wrapper {
@@ -139,38 +144,8 @@
   }
 
   .mobile & {
-    display: flex;
-    flex: 0 1 auto;
-    flex-direction: row;
-    flex-wrap: wrap;
-    width: 100%;
-
-    .icon-live,
-    .icon-calendar {
-      display: block;
-      height: 4.5rem;
-      line-height: 4.5rem;
-      border-bottom: 1px solid transparent;
-    }
-
     .days {
-      padding-top: 1rem;
       font-size: 1.1rem;
-    }
-
-    .date-item,
-    .datepicker-wrapper {
-      flex-grow: 1;
-      flex-basis: 0;
-      max-width: 100%;
-      text-align: center;
-      padding: 0;
-      vertical-align: middle;
-      font-size: 0.9rem;
-    }
-
-    > span {
-      line-height: 3.3;
     }
   }
 }
