--- a/components/soccer/table/row/style.scss
+++ b/components/soccer/table/row/style.scss
@@ -39,6 +39,10 @@
     background-color: #ffd600;
 }
 
+.col-home, .text-score {
+    border-right: none;
+    border-bottom: none;
+}
 .col-home,
 .col-away {
     width: 100%;
