--- a/components/soccer/table/extra-match-info-row/style.scss
+++ b/components/soccer/table/extra-match-info-row/style.scss
@@ -1,7 +1,7 @@
 .text-extra {
-    font-size: 1.1rem;
+    font-size: 1rem;
     position: relative;
-    color: #000;
+    color: rgba(0, 0, 0, 0.64);
 
     .icon-link-match {
         position: absolute;
@@ -24,7 +24,6 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            min-height: 3rem;
         }
 
     }
