--- a/components/soccer/table/extra-match-info-row/style.scss
+++ b/components/soccer/table/extra-match-info-row/style.scss
@@ -2,6 +2,8 @@
     font-size: 1rem;
     position: relative;
     color: rgba(0, 0, 0, 0.64);
+    border-top: none !important;
+    border-left: none !important;
 
     .icon-link-match {
         position: absolute;
