--- a/components/date-bar/style.scss
+++ b/components/date-bar/style.scss
@@ -53,6 +53,8 @@
   flex-wrap: wrap;
   width: 100%;
   align-items: center;
+  height: 7.2rem;
+  font-size: 1.4rem;
   .date-item,
     .datepicker-wrapper {
       flex-grow: 1;
@@ -60,7 +62,7 @@
       max-width: 100%;
       text-align: center;
       vertical-align: middle;
-      padding: 1.7rem;
+      padding: 1.8rem;
 
       .mobile & {        
         font-size: 0.9rem;
@@ -144,6 +146,7 @@
   }
 
   .mobile & {
+    height: 4.8rem;
     .days {
       font-size: 1.1rem;
     }
