000 - edit content page

--- a/components/layout/style.scss
+++ b/components/layout/style.scss
@@ -162,8 +162,11 @@ body {
 
 .content {
     color: #333;
-    padding: 1rem;
+    padding: 1rem 0;
     box-sizing: border-box;
+    .mobile & {
+        padding: 1rem;
+    }
 }
 
 .badge-label {
