--- a/assets/styles/pages/loading.scss
+++ b/assets/styles/pages/loading.scss
@@ -28,7 +28,6 @@
       margin: 0 0 1.6rem;
       text-transform: uppercase;
       font-size: 1.4rem;
-      padding: 1rem 1.5rem;
       transition: .2s ease;
       cursor: pointer;
       font-family: inherit;
@@ -66,7 +65,7 @@
     }
 
     .logo {
-        color: #1B3464;
+        margin-top: 3.2rem;
     }
   }
 
@@ -77,4 +76,7 @@
       transform: translateX(-50%);
       width: 100%;
       color: #86888A;
+      .icon-copy-right {
+          padding-right: 0.8rem;
+      }
   }
