--- a/components/soccer/table/extra-match-info-row/style.scss
+++ b/components/soccer/table/extra-match-info-row/style.scss
@@ -4,6 +4,7 @@
     color: rgba(0, 0, 0, 0.64);
     border-top: none !important;
     border-left: none !important;
+    cursor: pointer;
 
     .icon-link-match {
         position: absolute;
