--- a/components/search-bar/style.scss
+++ b/components/search-bar/style.scss
@@ -1,15 +1,3 @@
-.search-filter {
-    display: flex;
-    justify-content: space-between;
-    padding: 1rem 0;
-    font-size: 1.4rem;
-    color: #3A3B45;
-}
-
-.combo-search {
-    display: flex;
-}
-
 .search-section {
     position: relative;
 }
@@ -59,27 +47,23 @@
     }
 }
 
-.filter-event {
-    border-radius: .4rem;
-    background-color: #1B3464;
-    color: #fff;
-    padding: 0 2rem;
-    text-align: center;
-    align-self: center;
-    margin-right: 1.2rem;
-    height: 3.6rem;
-    line-height: 3.6rem;
-}
+.mobile {
+    .search-section {
+        display: flex;
+        justify-content: flex-end;
+        width: 100%;
 
-.sort-dropdown {
-    height: 3.6rem;
-    min-width: 13rem;
-    margin-right: 1.2rem;
-    .select__indicator-separator {
-        display: none;
+        .icon-search {
+            font-size: 1.9rem;
+        }
     }
-    .select__control {
-        min-height: unset;
-        height: 100%;
+
+    .search-box {
+        width: 100%;
+
+    }
+
+    .btn-cancel {
+        color: #fff;
     }
 }
