--- a/assets/styles/components/_icons.scss
+++ b/assets/styles/components/_icons.scss
@@ -13,7 +13,13 @@
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
-
+.icon-arrow-down:before {
+    content: "\e910";
+}
+.icon-close:before {
+    content: "\e90e";
+    color: #c8ceda;
+}
 .icon-copy-right:before {
     content: "\e90f";
     color: #86888a;
