--- a/assets/styles/components/_buttons.scss
+++ b/assets/styles/components/_buttons.scss
@@ -24,3 +24,11 @@
     color: #fff
   }
 }
+
+.btn-primary-solid {
+  background-color: #1B3464;
+  color: #fff;
+  // padding: 0 2rem;
+  // text-align: center;
+  // align-self: center;
+}
