000 - collapse/expand for view ball tracker

--- a/components/soccer/match-detail/tabs/match-info-tab/style.scss
+++ b/components/soccer/match-detail/tabs/match-info-tab/style.scss
@@ -37,3 +37,10 @@
 .info-tab {
     display: flex;
 }
+
+.expand .icon-arrow-down {
+    transform: rotate(180deg);
+    display: inline-block;
+    position: relative;
+    top: .4rem;
+}
