--- a/components/search-bar/style.scss
+++ b/components/search-bar/style.scss
@@ -28,6 +28,23 @@
             color: #6D757D;
         }
     }
+
+    .icon-close {
+        position: absolute;
+        right: 0.6rem;
+        top: 1.1rem;
+        width: 1.4rem;
+        height: 1.4rem;
+        background: #C8CEDA;
+        border-radius: 50%;
+        &:before {
+            font-size: 0.6rem;
+            color: #fff;
+            position: absolute;
+            left: .4rem;
+            top: .4rem;
+        }
+    }
 }
 
 .search-history {
@@ -62,24 +79,10 @@
         width: 80%;
         border-radius: 2rem;
         position: relative;
-        margin-right: 1.2rem;
-
+        margin-right: 1.2rem;    
         .icon-close {
-            position: absolute;
-            right: 1.2rem;
-            top: .8rem;
-            width: 1.4rem;
-            height: 1.4rem;
-            background: #C8CEDA;
-            border-radius: 50%;
-            &:before {
-                font-size: 0.6rem;
-                color: #fff;
-                position: absolute;
-                left: .3rem;
-                top: .4rem;
-            }
-        }
+            top: 0.8rem;
+        }    
     }
 
     .btn-cancel {
