--- a/components/soccer/filter-bar/style.scss
+++ b/components/soccer/filter-bar/style.scss
@@ -150,8 +150,13 @@
     padding: .8rem;
 
     .league-row {
-        flex: 1 1 50%;
+        flex: 0 1 33.33%;
         padding: .8rem 0;
+        display: flex;
+        justify-content: space-between;
+        .icon-menu-favorites {
+            padding-right: 1.8rem;
+        }
     }
 }
 
