--- a/components/soccer/filter-bar/style.scss
+++ b/components/soccer/filter-bar/style.scss
@@ -1,191 +1,188 @@
 .search-filter {
-    display: flex;
-    justify-content: space-between;
-    padding: 1rem 0;
-    font-size: 1.4rem;
-    color: #3A3B45;
-    .icon-search:before {
-        .mobile & {
-            font-size: 2rem;
-            padding: 0 0.9rem;
-        }
+  display: flex;
+  justify-content: space-between;
+  padding: 1rem 0;
+  font-size: 1.4rem;
+  color: #3a3b45;
+  .icon-search:before {
+    .mobile & {
+      font-size: 2rem;
+      padding: 0 0.9rem;
     }
+  }
 
-    .icon-more  {
-        position: relative;
-        top: .3rem;
-        .mobile & {
-            padding: 0  1.8rem 0 .9rem;
-        }        
+  .icon-more {
+    position: relative;
+    top: 0.3rem;
+    .mobile & {
+      padding: 0 1.8rem 0 0.9rem;
     }
+  }
 }
 
 .combo-search {
-    display: flex;
+  display: flex;
 }
 
 .filter-event {
-    border-radius: .4rem;
-    background-color: #1B3464;
-    color: #fff;
-    padding: 0 2rem;
-    text-align: center;
-    align-self: center;
-    margin-right: 1.2rem;
-    height: 3.6rem;
-    line-height: 3.6rem;
+  border-radius: 0.4rem;
+  background-color: #1b3464;
+  color: #fff;
+  padding: 0 2rem;
+  text-align: center;
+  align-self: center;
+  margin-right: 1.2rem;
+  height: 3.6rem;
+  line-height: 3.6rem;
 }
 
 .mobile {
-    .search-filter {
-        top: 0;
-        right: 0;
-        z-index: 999;
-        position: fixed;
-    }
+  .search-filter {
+    top: 0;
+    right: 0;
+    z-index: 999;
+    position: fixed;
+  }
 
-    .search-section {
-        top: 0;
-        left: 0;
-        right: 0;
-        position: fixed;
-        background-color: #1B3464;
-        z-index: 999;
-        height: 4rem;
-        padding: 0 1.8rem;
-        .txt-search {
-            height: 3rem;
-        }
+  .search-section {
+    top: 0;
+    left: 0;
+    right: 0;
+    position: fixed;
+    background-color: #1b3464;
+    z-index: 999;
+    height: 4rem;
+    padding: 0 1.8rem;
+    .txt-search {
+      height: 3rem;
     }
+  }
 }
 
 .ReactModal__Content {
-    width: 72rem;
-    height: 48rem;
-    margin: auto;
-    padding: 0 !important;
-    box-shadow: 0 0.1rem 0.4rem rgba(0, 0, 0, 0.25);
-    border: none;
-    display: flex;
-    flex-direction: column;
-    overflow: hidden !important;
+  width: 72rem;
+  height: 48rem;
+  margin: auto;
+  padding: 0 !important;
+  box-shadow: 0 0.1rem 0.4rem rgba(0, 0, 0, 0.25);
+  border: none;
+  display: flex;
+  flex-direction: column;
+  overflow: hidden !important;
 
-    .checkbox input[type="checkbox"],
-    .checkbox label:before,
-    .checkbox label:after {
-        width: 1.2rem;
-        height: 1.2rem;
-    }
+  .checkbox input[type="checkbox"],
+  .checkbox label:before,
+  .checkbox label:after {
+    width: 1.2rem;
+    height: 1.2rem;
+  }
 
-    .checkbox {
-        display: inline-block;
-        padding-right: .8rem;
-    }
-
+  .checkbox {
+    display: inline-block;
+    padding-right: 0.8rem;
+  }
 }
 
 .header-filter {
-    display: flex;
-    justify-content: space-between;
-    padding: 1.2rem;
-    border-bottom: .1rem solid #DEE2E6;
+  display: flex;
+  justify-content: space-between;
+  padding: 1.2rem;
+  border-bottom: 0.1rem solid #dee2e6;
 
-    .text-header {
-        text-transform: uppercase;
-        font-size: 1.4rem;
-        font-weight: bold;
-    }
+  .text-header {
+    text-transform: uppercase;
+    font-size: 1.4rem;
+    font-weight: bold;
+  }
 
-    .icon-close {
-        align-self: center;
-        cursor: pointer;
-    }
+  .icon-close {
+    align-self: center;
+    cursor: pointer;
+  }
 }
 
 .content-league {
-    padding: 1.2rem;
-    font-size: 1.4rem;
-    flex: 1;
-    overflow: auto;
+  padding: 1.2rem;
+  font-size: 1.4rem;
+  flex: 1;
+  overflow: auto;
 }
 
 .league-search-section {
-    padding: .8rem;
-    background-color: #ebebeb;
-    border-radius: .4rem;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  padding: 0.8rem;
+  background-color: #ebebeb;
+  border-radius: 0.4rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 
+  .league-search {
+    height: 3.9rem;
+    border-radius: 0.4rem;
+    border: 0.1rem solid #ced4da;
+  }
 
-    .league-search {
-        height: 3.9rem;
-        border-radius: .4rem;
-        border: .1rem solid #CED4DA;
+  .search-section {
+    width: calc(100% - 10rem);
+
+    .txt-search {
+      font-size: 1.4rem;
+      font-size: "Roboto", Verdana, Geneva, Tahoma, sans-serif;
+      width: calc(100% - 3rem);
     }
 
-    .search-section {
-        width: calc(100% - 10rem);
-
-        .txt-search {
-            font-size: 1.4rem;
-            font-size: 'Roboto', Verdana, Geneva, Tahoma, sans-serif;
-            width: calc(100% - 3rem);
-        }
-
-        .search-box {
-            position: relative;
-        }
-
-        .icon-close {
-            display: none;
-        }
-
+    .search-box {
+      position: relative;
     }
+
+    .icon-close {
+      display: none;
+    }
+  }
 }
 
 .list-league {
-    display: flex;
-    flex-wrap: wrap;
-    padding: .8rem;
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0.8rem;
 
-    .league-row {
+  .league-row {
         flex: 0 1 33.33%;
-        padding: .8rem 0;
+    padding: 0.8rem 0;
         display: flex;
         justify-content: space-between;
+        cursor: pointer;
         .icon-menu-favorites {
             padding-right: 1.8rem;
         }
-    }
+  }
 }
 
 .footer-league {
-    display: flex;
-    justify-content: center;
-    border-top: 1px solid #DEE2E6;
-    padding: 1.2rem 0;
+  display: flex;
+  justify-content: center;
+  border-top: 1px solid #dee2e6;
+  padding: 1.2rem 0;
 
-    .btn {
-        min-width: 18rem;
-    }
+  .btn {
+    min-width: 18rem;
+  }
 }
 
 .ReactModal__Overlay {
-    background-color: rgba(229, 229, 229, 0.6) !important;
+  background-color: rgba(229, 229, 229, 0.6) !important;
 }
 
 .mobile-sort-menu {
-    background-color: #1B3464;
-    position: absolute;
-    top: 40px;
-    width: 100%;
-    z-index: 101;
-    color: #fff;
-    box-shadow: 0 0.1rem 0.4rem rgba(0, 0, 0, 0.25);
-    .action-item {
-        padding: .8rem 1.8rem;
-        border-top: .1rem solid #2D4470;
-        
-    }
+  background-color: #1b3464;
+  position: absolute;
+  top: 40px;
+  width: 100%;
+  z-index: 101;
+  color: #fff;
+  box-shadow: 0 0.1rem 0.4rem rgba(0, 0, 0, 0.25);
+  .action-item {
+    padding: 0.8rem 1.8rem;
+    border-top: 0.1rem solid #2d4470;
+  }
 }
