--- a/components/soccer/match-detail/general-info/style.scss
+++ b/components/soccer/match-detail/general-info/style.scss
@@ -26,6 +26,9 @@
   justify-content: center;
   align-items: center;
   padding: 1.2rem 0 2.4rem;
+  .mobile & {
+    font-size: 1.2rem;
+  }
   .home-section {
     text-align: right;
   }
