--- a/components/soccer/match-detail/general-info/style.scss
+++ b/components/soccer/match-detail/general-info/style.scss
@@ -26,8 +26,21 @@
   justify-content: center;
   align-items: center;
   padding: 1.2rem 0 2.4rem;
+
   .mobile & {
-    font-size: 1.2rem;
+    justify-content: initial;
+    padding: 1.2rem 0;
+    .status-section {
+      width: 5rem;
+    }
+    .icon-menu-favorites {
+      width: 5rem;
+    }
+    .match-section {
+      flex: 1;
+      display: flex;
+      justify-content: center;
+    }
   }
   .home-section {
     text-align: right;
@@ -38,6 +51,9 @@
   .reference-info {
     position: relative;
     top: 0.6rem;
+    .mobile & {
+      top: 0.2rem;
+    }
   }
   .home-name,
   .away-name {
@@ -45,14 +61,24 @@
     font-weight: bold;
     color: #000;
     align-self: center;
+    .mobile & {
+      font-size: 1.2rem;
+    }
   }
   .score {
     display: flex;
     flex-direction: column;
+    .mobile & {
+      padding: 0 .8rem;
+    }
     .home-score,
     .away-score {
       font-size: 6.4rem;
       padding: 0 4rem;
+      .mobile & {
+        font-size: 1.2rem;
+        padding: 0 .4rem;
+      }
     }
     .status {
       font-size: 1.8rem;
@@ -66,6 +92,6 @@
   .full-score {
     display: flex;
     align-items: center;
-    align-items: center;
+    justify-content: center;
   }
 }
