--- a/components/soccer/match-detail/style.scss
+++ b/components/soccer/match-detail/style.scss
@@ -25,6 +25,9 @@
     flex-direction: row;
     flex-wrap: wrap;
     width: 100%;
+    .mobile & {
+      background-color: #fff;      
+    }
   }
   .react-tabs__tab {
     border: none;
@@ -37,10 +40,23 @@
     max-width: 100%;
     text-align: center;
     padding: 1rem 0 1.1rem;
+    .mobile & {
+      font-size: 1.2rem;
+      color: #000;
+    }
   }
   .react-tabs__tab--selected {
     border-radius: 0;
     background-color: #122344;
     border-bottom: 0.1rem solid #e70c12;
+    .mobile & {
+      background-color: #fff;
+      color: #FF7D00;
+      border-bottom: 0.2rem solid #FF7D00;
+    }
   }
+}
+
+.mobile .match-detail {
+  width: 100%;
 }
