--- a/components/search-bar/style.scss
+++ b/components/search-bar/style.scss
@@ -6,6 +6,7 @@
     background-color: #fff;
     border: 1px solid #CED4DA;
     border-radius: 4px;
+    padding-left: 3rem;
 
     .txt-search {
         height: 3.4rem;
@@ -21,8 +22,9 @@
     .icon-search {
         font-size: 1.8rem;
         padding: 0 .4rem;
-        position: relative;
-        top: .3rem;
+        position: absolute;
+        top: .8rem;
+        left: .2rem;
 
         &:before {
             color: #6D757D;
