--- a/components/date-picker/style.scss
+++ b/components/date-picker/style.scss
@@ -102,17 +102,23 @@
     }
 }
 
-body:not(.mobile) {
-  .react-datepicker-popper {
-    //margin-left: -200px;
-    top: 1.2rem !important;
-    left: -15rem !important;
+
+.react-datepicker-popper {
+  //margin-left: -200px;
+  top: 2.8rem !important;
+  left: -15rem !important;
+  .mobile & {
+    left: unset !important;
+    right: 0;
+    top: -4rem !important;
+
   }
 }
 
+
 .mobile {
   .react-datepicker-popper {
-    width: 100%;
+    //width: 100%;
     transform: translate3d(0, 9rem, 0px) !important;
     background-color: #fff;
     box-shadow: 0 0 0.5rem 0 #d7d7d7;
