--- a/components/soccer/filter-bar/style.scss
+++ b/components/soccer/filter-bar/style.scss
@@ -14,6 +14,9 @@
   .icon-more {
     position: relative;
     top: 0.3rem;
+    &:hover {
+      cursor: pointer;
+    }
     .mobile & {
       padding: 0 1.8rem 0 0.9rem;
     }
@@ -34,6 +37,7 @@
   margin-right: 1.2rem;
   height: 3.6rem;
   line-height: 3.6rem;
+  cursor: pointer;
 }
 
 .mobile {
@@ -59,6 +63,7 @@
     .icon-search {
       top: .6rem;
       left: .4rem;
+      cursor: pointer;
     }
   }
 }
