--- a/components/soccer/filter-bar/style.scss
+++ b/components/soccer/filter-bar/style.scss
@@ -99,16 +99,12 @@
       }
     }
     .list-league {
-      padding: 0.8rem 1.2rem 0.8rem 1.6rem;
+      padding: 0.8rem 0.4rem;
     }
     .league-search-section {
       flex-direction: column-reverse;
       align-items: flex-start;
-      padding: 0 0.8rem;
-      .check-all {
-        margin-left: 0.8rem;
-        margin-bottom: .8rem;
-      }
+      padding: 0 0.4rem;
     }
    
   }
@@ -129,8 +125,13 @@
 .header-filter {
   display: flex;
   justify-content: space-between;
-  padding: 1.2rem;
+  padding: 1.2rem 1.8rem;
   border-bottom: 0.1rem solid #dee2e6;
+  .mobile & {
+    justify-content: center;
+    background-color: #1B3464;
+    color: #fff;
+  }
 
   .text-header {
     text-transform: uppercase;
@@ -141,6 +142,9 @@
   .icon-close {
     align-self: center;
     cursor: pointer;
+    .mobile & {
+      display: none;
+    }
   }
 }
 
@@ -152,8 +156,7 @@
 }
 
 .league-search-section {
-  padding: 0.8rem;
-  background-color: #ebebeb;
+  padding: 0 0.8rem;
   border-radius: 0.4rem;
   display: flex;
   justify-content: space-between;
