000 - edit status for general info

--- a/components/soccer/match-detail/general-info/style.scss
+++ b/components/soccer/match-detail/general-info/style.scss
@@ -105,8 +105,12 @@
       width: 6.4rem;
       border-radius: 50%;
       background-color: #e0e0e0;
-      line-height: 6.4rem;
       color: #000;
+      word-break: break-all;
+      padding: 0 .8rem;
+      display: flex;
+      align-items: center;
+      justify-content: center;
     }
   }
   .full-score {
