--- a/components/date-bar/style.scss
+++ b/components/date-bar/style.scss
@@ -62,7 +62,7 @@
       max-width: 100%;
       text-align: center;
       vertical-align: middle;
-      padding: 1.8rem;
+      padding: 1.9rem 1.8rem;
       cursor: pointer;
 
       .mobile & {        
