000 - fix calendar not loading css after selecting viewmode

--- a/components/date-picker/style.scss
+++ b/components/date-picker/style.scss
@@ -1,4 +1,4 @@
-@import "~react-datepicker/dist/react-datepicker.css";
+@import "~react-datepicker/src/stylesheets/datepicker.scss";
 
 .datepicker-wrapper{
     display: inline-block;
