--- a/assets/styles/components/_icons.scss
+++ b/assets/styles/components/_icons.scss
@@ -13,6 +13,9 @@
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
+.icon-clock:before {
+    content: "\e913";
+}
 .icon-more:before {
     content: "\e912";
     color: #fff;
