--- a/components/soccer/match-detail/general-info/style.scss
+++ b/components/soccer/match-detail/general-info/style.scss
@@ -111,6 +111,7 @@
       display: flex;
       align-items: center;
       justify-content: center;
+      flex-direction: column;
     }
   }
   .full-score {
