--- a/components/layout/header/navbar/Navbar.scss
+++ b/components/layout/header/navbar/Navbar.scss
@@ -69,6 +69,7 @@
     color: white;
     text-decoration: none;
     font-size: 1.1rem;
+    text-transform: capitalize;
 
     >i {
       display: block;
@@ -81,4 +82,3 @@
     display: block;
   }
 }
-
