000 - fix some bugs UI

--- a/components/search-bar/style.scss
+++ b/components/search-bar/style.scss
@@ -78,7 +78,7 @@
     }
 
     .search-box {
-        width: 80%;
+        width: calc(100% - 5rem);
         border-radius: 2rem;
         position: relative;
         margin-right: 1.2rem;    
