--- a/components/soccer/match-detail/general-info/style.scss
+++ b/components/soccer/match-detail/general-info/style.scss
@@ -2,6 +2,10 @@
   border-radius: 0.4rem;
   box-shadow: 0 0.1rem 0.4rem rgba(0, 0, 0, 0.25);
   margin-bottom: 0.8rem;
+  .mobile & {
+    margin: 0 0.8rem 0.8rem 0.8rem;
+    background-color: #fff;
+  }
 }
 
 .extra-info {
