000 - style for league flag

--- a/components/soccer/filter-bar/style.scss
+++ b/components/soccer/filter-bar/style.scss
@@ -239,7 +239,7 @@
 
 .mobile-sort-menu {
   background-color: #1b3464;
-  position: absolute;
+  position: fixed;
   top: 40px;
   width: 100%;
   z-index: 101;
