--- a/components/soccer/match-detail/general-info/style.scss
+++ b/components/soccer/match-detail/general-info/style.scss
@@ -23,10 +23,11 @@
   .league-name {
     text-transform: uppercase;
     font-weight: bold;
+    display: flex;
 
     img {
       width: 3rem;
-      height: 2.5rem;
+      margin-right: .4rem;
     }
   }
 }
